--- a/web/www/index.html
+++ b/web/www/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>WASI linenoise example powered by xterm-pty</title>
+    <title>Instant RISC-V</title>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset.css@2.0.2/reset.min.css">
     <link rel="stylesheet" href="./css.css">
